@startuml

title __FILE's Class Diagram__\n

  package com.jensui.projects.fade {
    package com.jensui.projects.fade.connector.file {
      class FIleCopyCommand {
          + copy()
      }
    }
  }
  

  package com.jensui.projects.fade {
    package com.jensui.projects.fade.connector.file {
      class File {
          - file : File
          + File()
          + getConnector()
          + setConnector()
          + mkDir()
          + createNewFile()
          + setWritable()
          + getChildCount()
          + getChildren()
          + getName()
          + getURI()
          + isDir()
          + getDescription()
          + getSize()
          + getTotalSpace()
          + getFreeSpace()
          + getLastChanged()
          + exists()
          + getFile()
          + getParent()
      }
    }
  }
  

  package com.jensui.projects.fade {
    package com.jensui.projects.fade.connector.file {
      class FileConnector {
          + getFile()
          + getFile()
          + convert()
          + getRootFiles()
          + getRenameCommand()
          + getCopyCommand()
          + getDeleteCommand()
          - convertFiles()
      }
    }
  }
  

  package com.jensui.projects.fade {
    package com.jensui.projects.fade.connector.file {
      class FileDeleteCommand {
          + delete()
      }
    }
  }
  

  package com.jensui.projects.fade {
    package com.jensui.projects.fade.connector.file {
      class FileRenameCommand {
          + rename()
      }
    }
  }
  

  FIleCopyCommand -up-|> ICopyCommand
  File -up-|> IFile
  File o-- IConnector : connector
  FileConnector -up-|> IConnector
  FileDeleteCommand -up-|> IDeleteCommand
  FileRenameCommand -up-|> IRenameCommand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
